--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -7,15 +7,22 @@
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_margin">0.5dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Operators_Letras" parent="Container_Button">
-        <item name="backgroundTint">@color/white</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:src">@drawable/img_a</item>
+        <item name="android:background">@drawable/selector_borda_clicavel</item>
+        <item name="android:scaleType">centerInside</item>
     </style>
 
     <style name="Operators_Numbers" parent="Container_Button">
-        <item name="backgroundTint">@color/grey</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/selector_borda_clicavel</item>
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
